<resources>
    <string name="app_name">PVC For Wires &amp; Cables</string>
    <string name="bt_1">Introduction</string>
    <string name="bt_2">PVC Resin Preparation</string>
    <string name="bt_3">Composition in PVC Compound</string>
    <string name="bt_4">Compound Density &amp; Price Calculation</string>
    <string name="bt_5">Compound Density Calculation</string>
    <string name="bt_6">Compound Price Calculation</string>
    <string name="bt_7">Auto BOM Calculation</string>
    <string name="bt_8">Basic Formulation</string>
    <string name="bt_9">PVC Raw Material Function Part:1 </string>
    <string name="bt_10">About Me</string>
    <string name="bt_11">PVC RM Test Procedure</string>
    <string name="bt_12">PVC Raw Material Function Part:2</string>
    <string name="int_1">History of PVC</string>
    <string name="title_activity_introduction">Introduction</string>
    <string name="Contact_us">I am Bibhuranjan Bihari,Working as a Production Engineer in PVC Compounding
        sector in some where in this world.Basically I am a Plastic Engineer,graduated from CIPET,Bhubaneswar.I love to develop Android
        application required in our daily working activity.Just providing some basic ideas about PVC Compounding requried for Wires &amp; Cable.
        Contents provided in the application is completely confidential and limited to certain user.So please ignore if you get by chance from some where.
        All data are found after doing  research in daily activity.If any Suggestion regarding application improvement then contact me on below mention ID. </string>
    <string name="history">History of PVC(Poly Vinyl Chloride)</string>
    <string name="history1">Polyvinyl chloride or PVC was first created by the German chemist
        Eugen Baumann in 1872.Vinyl is the second most produced plastic in  the world. The first
        products from vinyl that Walter Semon produced were golf balls and shoe heels. Today,
        hundreds of products are made from vinyl, including: shower curtains, raincoats, wires,
        appliances, floor tiles, paints and surface coatings.PVC is a thermoplastic &amp; Non hygroscopic material
    which is normally available in the rigid which no doubt can be brought in to flexible by adding suitable
        plasticizers.In PVC the chlorine content is 56.7% &amp; however the value can be increased through
        chlorination process after which the product is well known for CPVC(Chlorinated Poly Vinyl Chloride)
    </string>
    <string name="why_pvc">Why PVC for Wires &amp; Cables?</string>
    <string name="why_pvc1">PVC (Polyvinyl Chloride) – is the most commonly used thermoplastic
        insulator for cables. It is cheap, durable and widely available. However, the chlorine
        in PVC (a halogen) causes the production of thick, toxic, black smoke when burnt and
        can be a health hazard The electrical characteristics of PVC such as electrical insulating
        properties or dielectric constant are excellent.To express electrical insulating properties,
        volume resistivity or dielectric strength is widely used as an index. The volume resistivity
        is expressed in terms of electrical resistance calculated per unit volume of the test piece.
        The dielectric strength is expressed in terms of the magnitude of voltage withstood without
        destruction of the test piece when a specified amount of voltage is applied for a specified
        period of time. In both cases, a higher value means better electrical characteristics.
        The volume resistivity of PVC products is slightly lower than those of olefin products,
         but since higher fire resistant properties are required for electrical components,
        PVC is used widely in a variety of applications such as electric cables for residential buildings,
        vehicles, household electrical appliances, cable coverings, insulating tapes, switch boxes,
        wire coverings, and protecting tubes for power and telecommunications cables. but since
        higher fire resistant properties are required for electrical components, PVC is used widely
        in a variety of applications such as electric cables for residential buildings, vehicles,
        household electrical appliances, cable coverings, insulating tapes, switch boxes, wire coverings,
        and protecting tubes for power and telecommunications cables.</string>
    <string name="den_display_text1">Raw Materials Name</string>
    <string name="den_display_text2">Raw Materials Density</string>
    <string name="den_display_text3">Phr</string>
    <string name="den_cal">Raw Material Names</string>
    <string name="rn1">Resin K-70 &amp; K-67</string>
    <string name="rn2">Calcium Carbonate(OT)</string>
    <string name="rn3">Aluminum Hydroxide(800)</string>
    <string name="rn4">Magnesium Hydroxide</string>
    <string name="rn5">Tribasic Lead Stearate</string>
    <string name="rn6">Di basic Lead Sulphate</string>
    <string name="rn7">Lead Stearate</string>
    <string name="rn8">Calcium Stearate</string>
    <string name="rn9">Finalux GCC-10</string>
    <string name="rn10">Antimony Trioxide</string>
    <string name="rn11">Zinc Borate</string>
    <string name="rn12">Molybednum Trioxide</string>
    <string name="rn13">Paraffin Wax</string>
    <string name="rn14">Dioctyl Pthalate</string>
    <string name="rn15">Chlorinated Wax</string>
    <string name="rn16">Epoxy Oil</string>
    <string name="rn17">TOTM</string>
    <string name="rn18">CaZn Stabilizers</string>
    <string name="rn19">Calcined Clay</string>
    <string name="rn20">Stearic Acid</string>
    <string name="rn21">Fine Pastaid-T</string>
    <string name="rn22">Non Pthalate Plasticizer</string>
    <string name="rn23">Calcined Clay-Metaplast 85</string>
    <string name="rn24">Calcined Clay-Polestar 450</string>
    <string name="rn25">Flame Guard</string>
    <string name="rn26">Ca/Zn(Rup 144 BT)</string>
    <string name="rn27">PE Wax AC316 A</string>
    <string name="rn28">MDH Ecoperian 3.5C</string>
    <string name="rn29">ATH Apyral 40CD/800</string>
    <string name="rn30">ATH Martinol Leo 104</string>
    <string name="rn31">Ca/Zn(81/5)</string>
    <string name="rn32">Calcium Carbonate</string>
    <string name="rn33">Aluminum Hydroxide</string>
    <string name="rn34">Eunox-76</string>
    <string name="rn35">DIDP</string>
    <string name="rn36">Calcined Clay</string>
    <string name="rn37">Dibasic Lead Phosphate</string>
    <string name="den_cal1">Raw Material Density</string>
    <string name="den_cal2">Phr</string>
    <string name="density_calculation">Specific Gravity of the Compound</string>
    <string name="display">Show Compound Gravity</string>
    <string name="price_display_text1">Raw Materials Name</string>
    <string name="price_display_text2">Raw Materials Price</string>
    <string name="price_display_text3">Phr</string>
    <string name="price_display_text4">Parts per 100 of Resin</string>
    <string name="price_calculation">Price of the Compound</string>
    <string name="display1">Show Compound Price</string>
    <string name="price">Price</string>
    <string name="base12">FR Base 1.42 Sp.Gravity</string>
    <string name="base11">FR Base 1.43 Sp.Gravity</string>
    <string name="base1">FR Base 1.44 Sp.Gravity</string>
    <string name="base13">FR Base 1.45 Sp.Gravity</string>
    <string name="base2">FR Base 1.46 Sp.Gravity</string>
    <string name="base8">FR Base 1.47 Sp.Gravity</string>
    <string name="base3">FR Base 1.48 Sp.Gravity</string>
    <string name="base14">FR Base 1.49 Sp.Gravity</string>
    <string name="base15">FR Base 1.50 Sp.Gravity</string>
    <string name="base4">FR Base 1.51 Sp.Gravity</string>
    <string name="base5">FR Base LLS 1.52 (700 mpm)</string>
    <string name="base6">FR Base HLS 1.52(900 mpm)</string>
    <string name="base7">Non FR Base Type D 1.52 Sp.Gravity</string>
    <string name="base9">FR Base Type D 1.52 Sp.Gravity</string>
    <string name="base10">FR Base Without ZB &amp; FG </string>
    <string name="finolex_base">Finolex Base</string>
    <string name="finolex_skin">Finolex Skin</string>
    <string name="polycab_base">Polycab Base</string>
    <string name="polycab_skin">Polycab Skin</string>
    <string name="skin1">SKIN HLS (700 mpm)</string>
    <string name="skin2">SKIN LLS (300 mpm)</string>
    <string name="skin3">Transparent SKIN</string>
    <string name="telephonest">Telephone Sheathing</string>
    <string name="sheathing">FR Sheathing</string>
    <string name="sheathing1">Non FR Sheathing</string>
    <string name="frlsh">FRLSH</string>
    <string name="sheathing3">FRLSH Sheathing(ST2)</string>
    <string name="sheathing2">FRLSH Sheathing(ST3)</string>
    <string name="typec1">Type C(1)</string>
    <string name="typec2">Type C(2)</string>
    <string name="typec3">Type C(3)</string>
    <string name="return_home">Return to Main Menu</string>
    <string name="resin">What is Resin?</string>
    <string name="resin1">Suspension Grade</string>
    <string name="resin2">Emulsion Grade</string>
    <string name="resin3">Bulk Grade</string>
    <string name="resin4">Co-polymer Grade</string>
    <string name="kvalue">K-Value</string>
    <string name="plasticizer">What is Plasticizer?</string>
    <string name="plasticizer1">Primary Plasticizer</string>
    <string name="plasticizer2">Secondary Plasticizer</string>
    <string name="stabilizer">What is Stabilizer?</string>
    <string name="stabilizer1">Heat Stabilizer</string>
    <string name="stabilizer2">Light Stabilizer</string>
    <string name="lubricants">What is Lubricants?</string>
    <string name="lubricants1">Primary Lubricants</string>
    <string name="lubricants2">Secondary Lubricants</string>
    <string name="filler">What is Fillers?</string>
    <string name="filler1">Ground Calcium Carbonate</string>
    <string name="filler2">Precipitated Calcium Carbonate</string>
    <string name="smokesuppresant">What is Smokesuppresant?</string>
    <string name="smokesuppresant1">How it Works?</string>
    <string name="flameretardent">What is Flame Retardent?</string>
    <string name="flameretardent1">How it Works?</string>
    <string name="rmtp1">Acid Value of Plasticizers</string>
    <string name="rmtp2">Acidity of CPW</string>
    <string name="rmtp3">Acidity of Stearic Acid</string>
    <string name="rmtp4">Assay as Al2O3</string>
    <string name="rmtp5">Bisphenol-A in DOP</string>
    <string name="rmtp6">Bulk Density</string>
    <string name="rmtp7">CaCO3 &amp; MgCO3</string>
    <string name="rmtp8">Color of Plasticizers</string>
    <string name="rmtp9">Conductivity of Resin</string>
    <string name="rmtp10">Ester Value &amp; Ester Content</string>
    <string name="rmtp11">Heat Stability</string>
    <string name="rmtp12">Iodine Value</string>
    <string name="rmtp13">K-value</string>
    <string name="rmtp14">Lead Content(PbO)</string>
    <string name="rmtp15">Loss of Ignition</string>
    <string name="rmtp16">Melting Point</string>
    <string name="rmtp17">Moisture Content</string>
    <string name="rmtp18">Oxirene Oxygen</string>
    <string name="rmtp19">Plasticizer Absorption Number</string>
    <string name="rmtp20">Purity of Sb2O3</string>
    <string name="rmtp21">Seive Residue</string>
    <string name="rmtp22">Specific Gravity</string>
    <string name="rmtp23">Thermal Stability</string>
    <string name="rmtp24">Total Fatty Matters</string>
    <string name="rmtp25">Viscosity</string>
    <string name="rmtp26">Volatile Loss</string>
    <string name="rmtp27">Halogen Acid Gas</string>
    <string name="rmtp28">Limiting Oxygen Index</string>
    <string name="rmtp29">Smoke Density Rating</string>
    <string name="rmtp30">Cell Resitance of CPW</string>
    <string name="rmtp31">Chemical Reagents List</string>
    <string name="rmtp32">Chemical Glassware List</string>
    <string name="rmtp33">Lab Instruments</string>
</resources>