<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="FR Base Item Names">
        <menu>
    <group android:checkableBehavior="single">
        <item
        android:id="@+id/base12"
        android:title="@string/base12"
        android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/base11"
            android:title="@string/base11"
            android:icon="@drawable/ic_exit"/>

        <item
            android:id="@+id/base1"
            android:title="@string/base1"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/base13"
            android:title="@string/base13"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/base2"
            android:title="@string/base2"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/base8"
            android:title="@string/base8"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/base3"
            android:title="@string/base3"
            android:icon="@drawable/ic_exit"/>
        <item
        android:id="@+id/base14"
        android:title="@string/base14"
        android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/base15"
            android:title="@string/base15"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/base4"
            android:title="@string/base4"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/base5"
            android:title="@string/base5"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/base6"
            android:title="@string/base6"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/base7"
            android:title="@string/base7"
            android:icon="@drawable/ic_exit"/>
        <item
        android:id="@+id/base9"
        android:title="@string/base9"
        android:icon="@drawable/ic_exit"/>
        <item
        android:id="@+id/base10"
        android:title="@string/base10"
        android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/finolex"
            android:title="@string/finolex_base"
            android:icon="@drawable/ic_exit"/>
        <item
        android:id="@+id/polycab"
        android:title="@string/polycab_base"
        android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/typec1"
            android:title="@string/typec1"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/typec2"
            android:title="@string/typec2"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/typec3"
            android:title="@string/typec3"
            android:icon="@drawable/ic_exit"/>

        </group>
        </menu>
        </item>

         <item android:title="Non FR SKIN Item Names">
             <menu>
         <group android:checkableBehavior="single">

        <item
            android:id="@+id/skin1"
            android:title="@string/skin1"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/skin2"
            android:title="@string/skin2"
            android:icon="@drawable/ic_exit"/>
        <item
             android:id="@+id/skin3"
             android:title="@string/skin3"
             android:icon="@drawable/ic_exit"/>
             <item
                 android:id="@+id/finolexskin"
                 android:title="@string/finolex_skin"
                 android:icon="@drawable/ic_exit"/>
             <item
                 android:id="@+id/polycabskin"
                 android:title="@string/polycab_skin"
                 android:icon="@drawable/ic_exit"/>
         </group>
             </menu>
         </item>

    <item android:title="Sheathing Item Names">
        <menu>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/telehphonest"
            android:title="@string/telephonest"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/frlsh"
            android:title="@string/frlsh"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/frst"
            android:title="@string/sheathing"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/nfrst"
            android:title="@string/sheathing1"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/frlshst"
            android:title="@string/sheathing2"
            android:icon="@drawable/ic_exit"/>
        <item
            android:id="@+id/frlshst2"
            android:title="@string/sheathing3"
            android:icon="@drawable/ic_exit"/>
    </group>
        </menu>
    </item>
        <item
            android:id="@+id/return_menu"
            android:title="@string/return_home"
            android:icon="@drawable/ic_home"/>

</menu>