<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="PVC RM Testing Lists">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/rmtp31"
                    android:title="@string/rmtp31"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp32"
                    android:title="@string/rmtp32"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp33"
                    android:title="@string/rmtp33"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp1"
                    android:title="@string/rmtp1"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp2"
                    android:title="@string/rmtp2"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp3"
                    android:title="@string/rmtp3"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp4"
                    android:title="@string/rmtp4"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp5"
                    android:title="@string/rmtp5"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp6"
                    android:title="@string/rmtp6"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp7"
                    android:title="@string/rmtp7"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp8"
                    android:title="@string/rmtp8"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp9"
                    android:title="@string/rmtp9"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp10"
                    android:title="@string/rmtp10"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp11"
                    android:title="@string/rmtp11"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp12"
                    android:title="@string/rmtp12"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp13"
                    android:title="@string/rmtp13"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp14"
                    android:title="@string/rmtp14"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp15"
                    android:title="@string/rmtp15"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp16"
                    android:title="@string/rmtp16"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp17"
                    android:title="@string/rmtp17"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp18"
                    android:title="@string/rmtp18"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp19"
                    android:title="@string/rmtp19"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp20"
                    android:title="@string/rmtp20"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp21"
                    android:title="@string/rmtp21"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp22"
                    android:title="@string/rmtp22"
                    android:icon="@drawable/ic_exit"/>
                 <item
                    android:id="@+id/rmtp23"
                    android:title="@string/rmtp23"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp24"
                    android:title="@string/rmtp24"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp25"
                    android:title="@string/rmtp25"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp26"
                    android:title="@string/rmtp26"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp27"
                    android:title="@string/rmtp27"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp28"
                    android:title="@string/rmtp28"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp29"
                    android:title="@string/rmtp29"
                    android:icon="@drawable/ic_exit"/>
                <item
                    android:id="@+id/rmtp30"
                    android:title="@string/rmtp30"
                    android:icon="@drawable/ic_exit"/>
                 <item
                    android:id="@+id/return_menu"
                    android:title="@string/return_home"
                    android:icon="@drawable/ic_home"/>
            </group>
        </menu>
    </item>
</menu>