<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/applicationfrontpage"
    tools:context="com.anchor.pvc.Introduction">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:id="@+id/inttext1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="@dimen/intro_headings_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/history1"
            android:id="@+id/tv1"
            android:layout_below="@+id/inttext1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/why_pvc"
            android:id="@+id/inttext2"
            android:layout_below="@id/tv1"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/intro_headings_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/why_pvc1"
            android:id="@+id/textView"
            android:layout_below="@id/inttext2"
            android:textSize="20dp"/>

    </RelativeLayout>
</ScrollView>
